spacing between videos & photos section fixed

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ section:nth-child(even) {
 }
 
 section {
+	min-height: 70vh;
 	text-align: center;
 	font-size: 40px;
 	padding: 25px;
